--- a/ocorrencias/templates/ocorrencias_equipamentos.html
+++ b/ocorrencias/templates/ocorrencias_equipamentos.html
@@ -15,7 +15,7 @@
         <h1 class="h1">Ocorrências de Equipamentos</h1>
         <ul class="list-group">
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <a href="#">Inativar Computador</a>
+                <a href="{% url "inativar_computador" %}">Inativar Computador</a>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
             <a href="#">Trocar Computador de Usuário</a>    
@@ -26,6 +26,12 @@
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <a href="#">Realizar inspeção</a>    
             </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <a href="#"></a>    
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+              <a href="{% url "listar_ocorrencias_equipamentos" %}">Listar Ocorrências de Equipamentos</a>    
+          </li>
         </ul>
     </div>
 {% endblock 'body' %}
