--- a/empresa/templates/cadastrar_empresa.html
+++ b/empresa/templates/cadastrar_empresa.html
@@ -8,65 +8,86 @@
 
 
 {% block 'body' %}
+{% include "partials/barra_navegacao.html" %}
 
-    {% include "partials/barra_navegacao.html" %}
-
-    <div class="container">
-        <br>
-        <br>
-        <p class="h2">Cadastro de Empresa</p>
+    <div class="container my-5">
+        <h2 class="mb-4">Cadastro de Empresa</h2>
+        
         {% if messages %}
             {% for message in messages %}
-                <section class="alert {{message.tags}}">
-                    {{message}}
-
-                </section>
+                <div class="alert {{ message.tags }}">
+                    {{ message }}
+                </div>
             {% endfor %}
         {% endif %}
-        <div class="row">
-            <div class="col-md">
-                <form action="{% url 'cadastrar_empresa' %}" method="POST" enctype='multipart/form-data'>{% csrf_token %}
-                <label>Nome da Empresa:</label>
-                <input type="text" name="nome_empresa" placeholder="Digite o nome da sua empresa ..." class="form-control">
-                <br>
-                <label>Cnpj:</label>
-                <input type="text" name="cnpj" placeholder="Digite o seu CNPJ, somente números ..." class="form-control">
-                <br>
-                <label>Envie a logo da empresa:</label>
-                <input type="file" name="logo" class="form-control">
-                <br>
-                <label>Telefone:</label>
-                <input type="text" name="telefone" placeholder="Digite o telefone..." class="form-control">
-                <br>
-                <label>E-mail:</label>
-                <input type="email" name="email" placeholder="Digite o email..." class="form-control">
-                <br>
-                <label>Site:</label>
-                <input type="text" name="site" placeholder="Digite o seu site ..." class="form-control">
-                <br>
+
+        <form action="{% url 'cadastrar_empresa' %}" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <label for="nome_empresa">Nome da Empresa:</label>
+                    <input type="text" id="nome_empresa" name="nome_empresa" placeholder="Digite o nome da sua empresa..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="cnpj">CNPJ:</label>
+                    <input type="text" id="cnpj" name="cnpj" placeholder="Digite o seu CNPJ, somente números..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="logo">Envie a logo da empresa:</label>
+                    <input type="file" id="logo" name="logo" class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="telefone">Telefone:</label>
+                    <input type="text" id="telefone" name="telefone" placeholder="Digite o telefone..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email" placeholder="Digite o email..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="site">Site:</label>
+                    <input type="text" id="site" name="site" placeholder="Digite o seu site..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="endereco">Endereço:</label>
+                    <input type="text" id="endereco" name="endereco" placeholder="Digite o seu endereço..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="numero">Número:</label>
+                    <input type="text" id="numero" name="numero" placeholder="Digite o número do endereço..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="complemento">Complemento:</label>
+                    <input type="text" id="complemento" name="complemento" placeholder="Digite o complemento, se houver..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="bairro">Bairro:</label>
+                    <input type="text" id="bairro" name="bairro" placeholder="Digite o bairro..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="cidade">Cidade:</label>
+                    <input type="text" id="cidade" name="cidade" placeholder="Digite a cidade..." class="form-control">
+                </div>
+
+                <div class="col-md-6 mb-3">
+                    <label for="uf">UF:</label>
+                    <input type="text" id="uf" name="uf" placeholder="Digite o UF (2 caracteres)..." class="form-control">
+                </div>
+
+                <div class="col-12">
+                    <input type="submit" class="btn btn-lg btn-indigo" value="Cadastrar">
+                </div>
             </div>
-            <div class="col-md">
-                <label>Endereço:</label>
-                <input type="text" name="endereco" placeholder="Digite o seu endereço ..." class="form-control">
-                <br>
-                <label>Número:</label>
-                <input type="text" name="numero" placeholder="Digite o seu número do endereço ..." class="form-control">
-                <br>
-                <label>Complemento:</label>
-                <input type="text" name="complemento" placeholder="Digite o complemento, se tiver ..." class="form-control">
-                <br>
-                <label>Bairro:</label>
-                <input type="text" name="bairro" placeholder="Digite o bairro ..." class="form-control">
-                <br>
-                <label>Cidade:</label>
-                <input type="text" name="cidade" placeholder="Digite a cidade ..." class="form-control">
-                <br>
-                <label>UF:</label>
-                <input type="text" name="uf" placeholder="Digite o UF ... 2 caracteres" class="form-control">
-                <br>
-                <input type="submit" class="btn btn-lg btn-indigo" value="cadastrar">
-                </form>
-            </div>
-        </div>
+        </form>
     </div>
 {% endblock 'body' %}
