--- a/equipamentos/templates/cadastrar_computador.html
+++ b/equipamentos/templates/cadastrar_computador.html
@@ -7,110 +7,137 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
+{% include "partials/barra_navegacao.html" %}
 
-    {% include "partials/barra_navegacao.html" %}
+<div class="container my-5">
+    <h2 class="mb-4">Cadastro de Computador</h2>
+    
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert {{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
 
-    <div class="container">
-        <br>
-        <br>
-        <p class="h2">Cadastro de Computador</p>
-        {% if messages %}
-            {% for message in messages %}
-                <section class="alert {{message.tags}}">
-                    {{message}}
-                </section>
-            {% endfor %}
-        {% endif %}
+    <form action="{% url 'cadastrar_computador' %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
         <div class="row">
-                <form action="{% url 'cadastrar_computador' %}" method="POST" enctype='multipart/form-data'>{% csrf_token %}
-                <label>Selecione o Setor:</label>
-                <br>
-                <select name="setor" class="form-control">
+            <div class="col-md-6 mb-3">
+                <label for="setor">Selecione o Setor:</label>
+                <select id="setor" name="setor" class="form-control">
                     {% for setor in setores %}
                         <option value="{{ setor.id }}">{{ setor.nome_setor }}</option>
                     {% endfor %}
                 </select>
-                <br>
-                <label>Nome na Rede:</label>
-                <input type="text" name="nome_rede" class="form-control">
-                <br>
-                <label>Status:</label>
-                <br>
-                <select name="status" class="form-control" disabled="True">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="nome_rede">Nome na Rede:</label>
+                <input type="text" id="nome_rede" name="nome_rede" class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="status">Status:</label>
+                <select id="status" name="status" class="form-control" disabled="true">
                     {% for i in status %}
                         <option value="{{ i.0 }}">{{ i.1 }}</option>
                     {% endfor %}
                 </select>
-                <br>
-                <label>Usuário:</label>
-                <br>
-                <select name="usuario" class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="usuario">Usuário:</label>
+                <select id="usuario" name="usuario" class="form-control">
                     {% for usuario in usuarios %}
                         <option value="{{ usuario.id }}">{{ usuario.nome_usuario }}</option>
                     {% endfor %}
                 </select>
-                <br>
-                <label>Tipo Equipamento:</label>
-                <br>
-                <select name="tipo_equipamento" class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="tipo_equipamento">Tipo Equipamento:</label>
+                <select id="tipo_equipamento" name="tipo_equipamento" class="form-control">
                     {% for tipo_equipamento in tipo_equipamentos %}
                         <option value="{{ tipo_equipamento.id }}">{{ tipo_equipamento.nome_tipo_equipamento }}</option>
                     {% endfor %}
                 </select>
-                <br>
-                <label>Marca:</label>
-                <br>
-                <select name="marca" class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="marca">Marca:</label>
+                <select id="marca" name="marca" class="form-control">
                     {% for marca in marcas %}
                         <option value="{{ marca.id }}">{{ marca.nome_marca }}</option>
                     {% endfor %}
                 </select>
-                <br>
-                <label>Modelo:</label>
-                <input type="text" name="modelo" placeholder="Digite o modelo..." class="form-control">
-                <br>
-                <label>Serial Number:</label>
-                <input type="text" name="serial_number" placeholder="Digite o modelo..." class="form-control">
-                <br>
-                <label>Processador:</label>
-                <input type="text" name="processador" placeholder="Digite o modelo..." class="form-control">
-                <br>
-                <label>Memoria:</label>
-                <input type="text" name="memoria" placeholder="Digite o modelo..." class="form-control">
-                <br>
-                <label>Armazenamento:</label>
-                <input type="text" name="armazenamento" placeholder="Digite o modelo..." class="form-control">
-                <br>
-                <label>Tipo Armazenamento:</label>
-                <br>
-                <select name="tipo_armazenamento" class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="modelo">Modelo:</label>
+                <input type="text" id="modelo" name="modelo" placeholder="Digite o modelo..." class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="serial_number">Serial Number:</label>
+                <input type="text" id="serial_number" name="serial_number" placeholder="Digite o serial number..." class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="processador">Processador:</label>
+                <input type="text" id="processador" name="processador" placeholder="Digite o processador..." class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="memoria">Memória:</label>
+                <input type="text" id="memoria" name="memoria" placeholder="Digite a memória..." class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="armazenamento">Armazenamento:</label>
+                <input type="text" id="armazenamento" name="armazenamento" placeholder="Digite o armazenamento..." class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="tipo_armazenamento">Tipo Armazenamento:</label>
+                <select id="tipo_armazenamento" name="tipo_armazenamento" class="form-control">
                     {% for i in tipo_armazenamentos %}
                         <option value="{{ i.0 }}">{{ i.1 }}</option>
                     {% endfor %}
                 </select>
-                <br>     
-                <label>Sistema Operacional:</label>
-                <br>
-                <select name="sistema_operacional" class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="sistema_operacional">Sistema Operacional:</label>
+                <select id="sistema_operacional" name="sistema_operacional" class="form-control">
                     {% for so in sistemas_operacionais %}
                         <option value="{{ so.id }}">{{ so.nome_sistema_operacional }}</option>
                     {% endfor %}
                 </select>
-                <br>     
-                <label>Sistema Operacional - Arquivo VBS:</label>
-                <br>
-                <input type="text" name="so_serial_vbs" placeholder="Digite o modelo..." class="form-control">
-                <br>     
-                <label>Sistema Operacional - CMD:</label>
-                <br>
-                <input type="text" name="so_serial_cmd" placeholder="Digite o modelo..." class="form-control">
-                <br>                                                     
-                <label>Nota Fiscal Computador:</label>
-                <input type="file" name="nf_computador" class="form-control">
-                <br>                
-                <label>Nota Fiscal Sistema Operacional:</label>
-                <input type="file" name="nf_sistema_operacional" class="form-control">
-                <br>           
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="so_serial_vbs">Sistema Operacional - Arquivo VBS:</label>
+                <input type="text" id="so_serial_vbs" name="so_serial_vbs" placeholder="Digite o serial..." class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="so_serial_cmd">Sistema Operacional - CMD:</label>
+                <input type="text" id="so_serial_cmd" name="so_serial_cmd" placeholder="Digite o serial..." class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="nf_computador">Nota Fiscal Computador:</label>
+                <input type="file" id="nf_computador" name="nf_computador" class="form-control">
+            </div>
+
+            <div class="col-md-6 mb-3">
+                <label for="nf_sistema_operacional">Nota Fiscal Sistema Operacional:</label>
+                <input type="file" id="nf_sistema_operacional" name="nf_sistema_operacional" class="form-control">
+            </div>
+
+            <div class="col-12 mb-3">
+                <label for="softwares">Softwares:</label>
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
@@ -122,27 +149,35 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">
-                                    <select name="softwares" class="form-control">
+                                <td>
+                                    <select id="softwares" name="softwares" class="form-control">
                                         {% for software in softwares %}
                                             <option value="{{ software.id }}">{{ software.nome_software }}</option>
                                         {% endfor %}
                                     </select>
-                                </th>
-                                <td><input type="text" name="serial_software" placeholder="XXXXX-XXXXX-XXXXX-XXXXX-XXXXX" class="form-control">
                                 </td>
-                                <td><input type="file" name="nf_software" class="form-control"></td>
+                                <td>
+                                    <input type="text" name="serial_software" placeholder="XXXXX-XXXXX-XXXXX-XXXXX-XXXXX" class="form-control">
+                                </td>
+                                <td>
+                                    <input type="file" name="nf_software" class="form-control">
+                                </td>
                             </tr>
                         </tbody>
                     </table>
-                    <button type="button" class="btn btn-primary">Adicionar Linha</button>                        
+                    <button type="button" class="btn btn-primary">Adicionar Linha</button>
                 </div>
+            </div>
 
-                <label>Observações:</label>
-                <textarea class="form-control" name="observacoes" rows="3"></textarea>                
-                <br>
-                <input type="submit" class="btn btn-lg btn-indigo" value="cadastrar">
-                </form>
+            <div class="col-12 mb-3">
+                <label for="observacoes">Observações:</label>
+                <textarea id="observacoes" class="form-control" name="observacoes" rows="3"></textarea>
+            </div>
+
+            <div class="col-12">
+                <input type="submit" class="btn btn-lg btn-indigo" value="Cadastrar">
+            </div>
         </div>
-    </div>
+    </form>
+</div>
 {% endblock 'body' %}
