Usando ChatGPT para melhorar os templates do App Empresa

--- a/empresa/templates/listar_empresas.html
+++ b/empresa/templates/listar_empresas.html
@@ -1,36 +1,36 @@
 {% extends "base.html" %}
 {% load static %}
 {% block 'head' %}
-
-<link rel="stylesheet" href="{% static 'empresarios/css/listar_empresas.css' %}">
-<link rel="stylesheet" href="{% static 'usuarios/css/usuarios.css' %}">
-
+<title>Listar Empresa</title>
 {% endblock 'head' %}
 
 {% block 'body' %}
-    {% include "partials/barra_navegacao.html" %}
-    <br>
-    <br>
-    <div class="container dark-color container_empresas">
-        <table class="table">
-            <thead >
-              <tr class="cabecalho" style="background-color: transparent !important;">
-                <th class="cabecalho" scope="col">Id</th>
-                <th class="cabecalho" scope="col">Empresa</th>                
-                <th class="cabecalho" scope="col">CNPJ</th>
-                <th class="cabecalho" scope="col">Ação</th>                
-              </tr>
-            </thead>
-            <tbody>
-                {% for empresa in empresas %}
-                    <tr class="linha">
-                        <td class="linha">{{ empresa.id }}</td>
-                        <td class="linha">{{ empresa.nome_empresa }}</td>
-                        <td class="linha">{{ empresa.cnpj }}</td>
-                        <td class="linha"><button type="button" class="btn btn-warning">Editar</button></td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-          </table>
-    </div>
+{% include "partials/barra_navegacao.html" %}
+
+<div class="container my-5 dark-color container_empresas">
+    <h2 class="mb-4">Lista de Empresas</h2>
+
+    <table class="table table-striped">
+        <thead>
+            <tr class="cabecalho" style="background-color: transparent !important;">
+                <th scope="col">Id</th>
+                <th scope="col">Empresa</th>
+                <th scope="col">CNPJ</th>
+                <th scope="col">Ação</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for empresa in empresas %}
+                <tr>
+                    <td>{{ empresa.id }}</td>
+                    <td>{{ empresa.nome_empresa }}</td>
+                    <td>{{ empresa.cnpj }}</td>
+                    <td>
+                        <button type="button" class="btn btn-warning">Editar</button>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock 'body' %}
