--- a/empresa/templates/listar_setores.html
+++ b/empresa/templates/listar_setores.html
@@ -8,29 +8,32 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
-    {% include "partials/barra_navegacao.html" %}
-    <br>
-    <br>
-    <div class="container dark-color container_empresas">
-        <table class="table">
-            <thead >
-              <tr class="cabecalho" style="background-color: transparent !important;">
-                <th class="cabecalho" scope="col">Id</th>
-                <th class="cabecalho" scope="col">Empresa</th>                
-                <th class="cabecalho" scope="col">Setor</th>
-                <th class="cabecalho" scope="col">Ação</th>                
-              </tr>
-            </thead>
-            <tbody>
-                {% for setor in setores %}
-                    <tr class="linha">
-                        <td class="linha">{{ setor.id }}</td>
-                        <td class="linha">{{ setor.empresa }}</td>
-                        <td class="linha">{{ setor.nome_setor }}</td>
-                        <td class="linha"><button type="button" class="btn btn-warning">Editar</button></td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-          </table>
-    </div>
+{% include "partials/barra_navegacao.html" %}
+
+<div class="container my-5 dark-color container_empresas">
+    <h2 class="mb-4">Lista de Setores</h2>
+
+    <table class="table table-striped">
+        <thead>
+            <tr class="cabecalho" style="background-color: transparent !important;">
+                <th scope="col">Id</th>
+                <th scope="col">Empresa</th>
+                <th scope="col">Setor</th>
+                <th scope="col">Ação</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for setor in setores %}
+                <tr>
+                    <td>{{ setor.id }}</td>
+                    <td>{{ setor.empresa }}</td>
+                    <td>{{ setor.nome_setor }}</td>
+                    <td>
+                        <button type="button" class="btn btn-warning">Editar</button>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock 'body' %}
