--- a/ocorrencias/templates/listar_ocorrencias_usuarios.html
+++ b/ocorrencias/templates/listar_ocorrencias_usuarios.html
@@ -8,43 +8,45 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
-    {% include "partials/barra_navegacao.html" %}
-    <br>
-    <br>
-    <div class="container dark-color container_empresas">
-        <table class="table">
-            <thead >
-              <tr class="cabecalho" style="background-color: transparent !important;">
-                <th class="cabecalho" scope="col">Id</th>
-                <th class="cabecalho" scope="col">Data</th>                    
-                <th class="cabecalho" scope="col">Tipo Ocorrência</th>                
-                <th class="cabecalho" scope="col">Usuario</th>     
-                <th class="cabecalho" scope="col">Setor</th>    
-                <th class="cabecalho" scope="col">Observações</th>                                                                             
-              </tr>
-            </thead>
-            <tbody>
-                {% for ocorrencia in ocorrencias %}
-                    <tr class="linha">
-                        <td class="linha">{{ ocorrencia.id }}</td>
-                        <td class="linha">{{ ocorrencia.data }}</td>
-                        <td class="linha">
-                          {% if ocorrencia.tipo_ocorrencia == '1' %}
+{% include "partials/barra_navegacao.html" %}
+
+<div class="container my-5 dark-color container_empresas">
+    <h2 class="mb-4">Lista de Ocorrências</h2>
+
+    <table class="table table-striped">
+        <thead>
+            <tr class="cabecalho" style="background-color: transparent !important;">
+                <th scope="col">Id</th>
+                <th scope="col">Data</th>
+                <th scope="col">Tipo Ocorrência</th>
+                <th scope="col">Usuário</th>
+                <th scope="col">Setor</th>
+                <th scope="col">Observações</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for ocorrencia in ocorrencias %}
+                <tr>
+                    <td>{{ ocorrencia.id }}</td>
+                    <td>{{ ocorrencia.data }}</td>
+                    <td>
+                        {% if ocorrencia.tipo_ocorrencia == '1' %}
                             INATIVAR USUÁRIO
-                          {% elif ocorrencia.tipo_ocorrencia == '2' %}
+                        {% elif ocorrencia.tipo_ocorrencia == '2' %}
                             TROCAR USUÁRIO DE SETOR
-                          {% endif %}
-                        </td>
-                        <td class="linha">{{ ocorrencia.usuario }}</td>
-                        {% if setor %}
-                          <td class="linha">{{ ocorrencia.setor.nome_setor }}</td>
-                        {% else %}
-                          <td class="linha">-</td>
                         {% endif %}
-                        <td class="linha">{{ ocorrencia.observacoes }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-          </table>
-    </div>
-{% endblock 'body' %}
+                    </td>
+                    <td>{{ ocorrencia.usuario }}</td>
+                    <td>
+                        {% if setor %}
+                            {{ ocorrencia.setor.nome_setor }}
+                        {% else %}
+                            -
+                        {% endif %}
+                    </td>
+                    <td>{{ ocorrencia.observacoes }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>{% endblock 'body' %}
