--- a/equipamentos/templates/cadastrar_marca.html
+++ b/equipamentos/templates/cadastrar_marca.html
@@ -8,31 +8,34 @@
 
 
 {% block 'body' %}
+{% include "partials/barra_navegacao.html" %}
 
-    {% include "partials/barra_navegacao.html" %}
+<div class="container my-5">
+    <h2 class="mb-4">Cadastro de Marca</h2>
 
-    <div class="container">
-        <br>
-        <br>
-        <p class="h2">Cadastro de Marca</p>
-        {% if messages %}
+    {% if messages %}
+        <div class="alert-container">
             {% for message in messages %}
-                <section class="alert {{message.tags}}">
-                    {{message}}
-
-                </section>
+                <div class="alert {{ message.tags }} mb-3">
+                    {{ message }}
+                </div>
             {% endfor %}
-        {% endif %}
-        <div class="row">
-            <div class="col-md">
-                <form action="{% url 'cadastrar_marca' %}" method="POST" enctype='multipart/form-data'>{% csrf_token %}
-                <br>
-                <label>Digite o nome da Marca:</label>
-                <input type="text" name="nome_marca" placeholder="Digite o nome da setor" class="form-control">
-                <br>
-                <input type="submit" class="btn btn-lg btn-indigo" value="cadastrar">
-                </form>
-            </div>
+        </div>
+    {% endif %}
+
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <form action="{% url 'cadastrar_marca' %}" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                
+                <div class="form-group mb-3">
+                    <label for="nome_marca">Digite o nome da Marca:</label>
+                    <input type="text" id="nome_marca" name="nome_marca" placeholder="Digite o nome da marca" class="form-control" required>
+                </div>
+
+                <button type="submit" class="btn btn-lg btn-indigo">Cadastrar</button>
+            </form>
         </div>
     </div>
+</div>
 {% endblock 'body' %}
