--- a/equipamentos/templates/listar_marcas.html
+++ b/equipamentos/templates/listar_marcas.html
@@ -8,27 +8,44 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
-    {% include "partials/barra_navegacao.html" %}
-    <br>
-    <br>
-    <div class="container dark-color container_empresas">
-        <table class="table">
-            <thead >
-              <tr class="cabecalho" style="background-color: transparent !important;">
-                <th class="cabecalho" scope="col">Id</th>
-                <th class="cabecalho" scope="col">Marca</th>                
-                <th class="cabecalho" scope="col">Ação</th>                
-              </tr>
+{% include "partials/barra_navegacao.html" %}
+
+<div class="container my-5">
+    <h2 class="mb-4">Lista de Marcas</h2>
+
+    {% if messages %}
+        <div class="alert-container mb-4">
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    <div class="table-responsive">
+        <table class="table table-bordered table-hover">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Marca</th>
+                    <th scope="col">Ação</th>
+                </tr>
             </thead>
             <tbody>
                 {% for marca in marcas %}
-                    <tr class="linha">
-                        <td class="linha">{{ marca.id }}</td>
-                        <td class="linha">{{ marca.nome_marca }}</td>
-                        <td class="linha"><button type="button" class="btn btn-warning">Editar</button></td>
+                    <tr>
+                        <td>{{ marca.id }}</td>
+                        <td>{{ marca.nome_marca }}</td>
+                        <td>
+                            <a href="#" class="btn btn-warning btn-sm" role="button" aria-label="Editar marca {{ marca.nome_marca }}">
+                                Editar
+                            </a>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
-          </table>
+        </table>
     </div>
+</div>
 {% endblock 'body' %}
