--- a/equipamentos/templates/listar_sistemas_operacionais.html
+++ b/equipamentos/templates/listar_sistemas_operacionais.html
@@ -8,27 +8,41 @@
 {% endblock 'head' %}
 
 {% block 'body' %}
-    {% include "partials/barra_navegacao.html" %}
-    <br>
-    <br>
-    <div class="container dark-color container_empresas">
-        <table class="table">
-            <thead >
-              <tr class="cabecalho" style="background-color: transparent !important;">
-                <th class="cabecalho" scope="col">Id</th>
-                <th class="cabecalho" scope="col">Software</th>                
-                <th class="cabecalho" scope="col">Ação</th>                
-              </tr>
-            </thead>
-            <tbody>
-                {% for so in sos %}
-                    <tr class="linha">
-                        <td class="linha">{{ so.id }}</td>
-                        <td class="linha">{{ so.nome_sistema_operacional }}</td>
-                        <td class="linha"><button type="button" class="btn btn-warning">Editar</button></td>
-                    </tr>
-                {% endfor %}
-            </tbody>
+{% include "partials/barra_navegacao.html" %}
+  <div class="container my-5">
+      <h2 class="mb-4">Lista de Sistemas Operacionais</h2>
+
+      {% if messages %}
+          <div class="alert-container mb-4">
+              {% for message in messages %}
+                  <div class="alert alert-{{ message.tags }}">
+                      {{ message }}
+                  </div>
+              {% endfor %}
+          </div>
+      {% endif %}
+
+      <div class="table-responsive">
+          <table class="table table-bordered table-hover">
+              <thead class="thead-light">
+                  <tr>
+                      <th scope="col">ID</th>
+                      <th scope="col">Nome do Sistema Operacional</th>
+                      <th scope="col">Ação</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  {% for so in sos %}
+                      <tr>
+                          <td>{{ so.id }}</td>
+                          <td>{{ so.nome_sistema_operacional }}</td>
+                          <td>
+                              <a href="#" class="btn btn-warning">Editar</a>
+                          </td>
+                      </tr>
+                  {% endfor %}
+              </tbody>
           </table>
-    </div>
-{% endblock 'body' %}
+      </div>
+  </div>
+</div>{% endblock 'body' %}
