Adicionando ocorrencia de Trocar Usuário de computador

--- a/ocorrencias/templates/ocorrencias_equipamentos.html
+++ b/ocorrencias/templates/ocorrencias_equipamentos.html
@@ -18,7 +18,7 @@
                 <a href="{% url "inativar_computador" %}">Inativar Computador</a>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-            <a href="#">Trocar Computador de Usuário</a>    
+            <a href="{% url "trocar_computador_usuario" %}">Trocar Usuário de um Computador</a>    
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <a href="#">Recolher computador para setor da TI</a>    
