--- a/templates/partials/barra_navegacao.html
+++ b/templates/partials/barra_navegacao.html
@@ -86,10 +86,12 @@
           <a class="dropdown-item" href="{% url 'listar_marcas' %}">Listar Marcas</a> 
           <a class="dropdown-item" href="{% url 'listar_softwares' %}">Listar Softwares</a>           
           <a class="dropdown-item" href="{% url 'listar_sistemas_operacionais' %}">Listar Sistema Operacionais</a>                     
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'ocorrencias_equipamentos' %}">Ocorrências</a>  
         </div>
       </li>
+      <!-- MENU WIKI -->
+      <li class="nav-item">
+        <a class="nav-link" href="#">Wiki</a>
+      </li>          
       <!-- MENU AJUDA -->
       <li class="nav-item">
         <a class="nav-link" href="#">Ajuda</a>
